spacing issues

--- a/components/TypeWriter/index.module.scss
+++ b/components/TypeWriter/index.module.scss
@@ -59,6 +59,7 @@
 
 @media (max-width: 480px) {
   .mainWrapper {
+    padding: 0 30px;
     // align-items: start;
     .main {
       font-size: 27px;
